--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
 <body>
     <h1>Unifont Glyph Modifications and Extensions</h1>
 
-    <h2>Emoji Glyph Consolidation</h2>
+    <h2>Emoji Glyph Normalization</h2>
 
     <p>
-        The first goal of this work is to improve the emoji glyphs in <a href="https://www.unifoundry.com/unifont/index.html">GNU Unifont</a>
-        with a focus on three consistency criteria listed below in order of priority:
+        The first goal of this work is to contribute to the excellent work provided by <a href="https://www.unifoundry.com/unifont/index.html">GNU Unifont</a>
+        and normalize its emoji glyphs by focusing on three consistency criteria listed below in order of priority. The
+        adjustments proposed here are intended to contribute positively to the project, ensuring that the emoji glyphs
+        in Unifont are as cohesive, user-friendly, and standards-aligned as possible while respecting the unique
+        character and legacy of the font.
     </p>
 
     <ol>
@@ -265,8 +268,8 @@
         Regardless of if and how Unifont uses these glyphs, I intend to make two new fonts to compliment and extend
         Unifont. One will use the monochrome emoji style glyphs and the other will use the color emoji style glyphs.
         Both will include full emoji support for sequences and variations. These fonts will only contain emoji
-        glyphs and their text variants. Unifont has full permission to use and redistribute these fonts and glyphs when
-        they become available.
+        glyphs and their text variants. Unifont has full permission to incorporate and redistribute these fonts and
+        glyphs when they become available.
     </p>
 
     <div id="glyphs">
