--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     </p>
 
     <p>
-        Regardless of if and how Unifont uses these glyphs, I intend to make two new fonts to compliment and extend
+        Regardless of if and how Unifont uses these glyphs, I intend to make two new fonts to complement and extend
         Unifont. One will use the monochrome emoji style glyphs and the other will use the color emoji style glyphs.
         Both will include full emoji support for sequences and variations. These fonts will only contain emoji
         glyphs and their text variants. Unifont has full permission to incorporate and redistribute these fonts and
