--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     <p>
         This project and the glyph designs on this page are licensed under the <a href="LICENSE.txt">GNU General Public License Version 3.</a>
         The font files for this project will be dual-licensed under the <a href="OFL.txt">SIL Open Font License (OFL) version 1.1</a>
-        and the GNU General Public License Version 3 with the GNU font embedding exception
+        and the GNU General Public License Version 3 with the GNU font embedding exception.
     </p>
 </body>
 
