--- a/index.html
+++ b/index.html
@@ -209,10 +209,8 @@
         <li>
             <strong>Be inclusive.</strong> Rather than the Fitzpatrick scale, Human16 derives its skin tone colors from
             <cite><a href="https://skintone.google/the-scale">Monk, Ellis. &ldquo;Monk Skin Tone Scale,&rdquo; 2019</a></cite>.
-            This scale is more modern, inclusive, and representative than the Fitzpatrick scale which is primary a
-            dermatological tool and has been criticized for its Eurocentric bias and insufficient representation of
-            global skin color diversity. The specific tones have been modified to better match the the rest of the
-            palette.
+            This scale is more modern, inclusive, and representative of global skin color diversity than the Fitzpatrick
+            scale. The specific tones have been modified to better match the the rest of the palette.
         </li>
     </ul>
 
