--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <h2>Glyphs</h2>
 
     <p>
-        This project will provide two new fonts called &ldquo;Comfont Emoji&rdquo; and &ldquo;Comfont Color Emoji&r;
+        This project will provide two new fonts called &ldquo;Comfont Emoji&rdquo; and &ldquo;Comfont Color Emoji&rdquo;
         to complement Unifont. Comfont Emoji will use the monochrome emoji style glyphs and Comfont Color Emoji will use
         the color emoji style glyphs. Both will include full emoji support for sequences and variations. These fonts
         will contain only emoji glyphs and their text variants and will be dual-licensed under the
