--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
     </p>
 
     <p>
-        If the character has a default text style presentation, the glyph in the <b>Unifont</b> column will be outlined
-        in yellow. If Unifont adopts the new designs in its charts, it will have to decide whether to use the text style
+        If a character has a default text style presentation, the glyph in the <b>Unifont</b> column is be outlined in
+        yellow. If Unifont adopts the new designs in its charts, it will have to decide whether to use the text style
         or (monochrome) emoji style glyph variant for those characters that have variations. Several possible approaches
         are listed below.
     </p>
