Add temporary note

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
 
     <h2>Emoji Glyph Normalization</h2>
 
+    <p class="note">
+        <strong>&#x26a0; Note:</strong> After reading through the nuances of text vs. emoji style presentations, the scope of
+        this section will be simplified and this section will be rewritten. The majority of this section is no longer
+        valid.
+    </p>
+
     <p>
         The first goal of this work is to contribute to the excellent work provided by <a href="https://www.unifoundry.com/unifont/index.html">GNU Unifont</a>
         and normalize its emoji glyphs by focusing on three consistency criteria listed below in order of priority. The
