Minor edit to notes

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <h2>Emoji Glyph Normalization</h2>
 
     <p class="note">
-        <strong>&#x26a0; Note:</strong> After reading through the nuances of text vs. emoji style presentations, the scope of
-        this section will be simplified and this section will be rewritten. The majority of this section is no longer
-        valid.
+        <strong>&#x26a0; Note:</strong> After reading through the nuances of text vs. emoji style presentations, the
+        scope of this goal will be simplified and this section will be rewritten. The majority of this section is no
+        longer valid.
     </p>
 
     <p>
@@ -223,7 +223,7 @@
 
     <p class="note">
         <strong>&#x26a0; Note:</strong> This section will be expanded to include text style presentations for all code
-        points and a minor rearrangement of the table with clarifications. Details to come.
+        points and a minor rearrangement of the table. Details to come.
     </p>
 
     <p>
