--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 
                     <th class="unifont">16.0.03</th>
                     <th class="text">Proposed</th>
+                    <th class="diff">Diff</th>
                 </tr>
             </thead>
             <tbody></tbody>
