Add face-concerned text style glyphs

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             <span class="control-group">
                 <label>Scale</label>
                 <br>
-                <label><input type="radio" name="scale" value="1" id="scale1x"> 1&#xD7;</label>
-                <label><input type="radio" name="scale" value="2" id="scale2x" checked> 2&#xD7;</label>
-                <label><input type="radio" name="scale" value="3" id="scale3x"> 3&#xD7;</label>
-                <label><input type="radio" name="scale" value="4" id="scale4x"> 4&#xD7;</label>
+                <label><input type="radio" name="unifont-scale" value="1" id="unifont-scale1x"> 1&#xD7;</label>
+                <label><input type="radio" name="unifont-scale" value="2" id="unifont-scale2x" checked> 2&#xD7;</label>
+                <label><input type="radio" name="unifont-scale" value="3" id="unifont-scale3x"> 3&#xD7;</label>
+                <label><input type="radio" name="unifont-scale" value="4" id="unifont-scale4x"> 4&#xD7;</label>
             </span>
         </fieldset>
 
@@ -294,10 +294,10 @@
             <span class="control-group">
                 <label>Scale</label>
                 <br>
-                <label><input type="radio" name="scale" value="1" id="scale1x"> 1&#xD7;</label>
-                <label><input type="radio" name="scale" value="2" id="scale2x" checked> 2&#xD7;</label>
-                <label><input type="radio" name="scale" value="3" id="scale3x"> 3&#xD7;</label>
-                <label><input type="radio" name="scale" value="4" id="scale4x"> 4&#xD7;</label>
+                <label><input type="radio" name="comfont-scale" value="1" id="comfont-scale1x">1&#xD7;</label>
+                <label><input type="radio" name="comfont-scale" value="2" id="comfont-scale2x" checked>2&#xD7;</label>
+                <label><input type="radio" name="comfont-scale" value="3" id="comfont-scale3x">3&#xD7;</label>
+                <label><input type="radio" name="comfont-scale" value="4" id="comfont-scale4x">4&#xD7;</label>
             </span>
         </fieldset>
 
@@ -311,9 +311,6 @@
                 <tr>
                     <th class="code">Code</th>
                     <th class="name">CLDR Short Name</th>
-
-                    <th class="unifont">16.0.03</th>
-                    <th class="text">Proposed</th>
 
                     <th class="emoji">Emoji</th>
                     <th class="color">Color</th>
