Reimplement Comfont table

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <thead>
                 <tr>
                     <th colspan="3">Unicode</th>
-                    <th colspan="2">Unifont</th>
+                    <th colspan="3">Unifont</th>
                 </tr>
                 <tr>
                     <th class="code">Code</th>
@@ -282,7 +282,7 @@
         text style variation), monochrome emoji style, and color emoji style.
     </p>
 
-    <div id="comfong-glyphs">
+    <div id="comfont-glyphs">
         <fieldset>
             <legend>Comfont Glyphs</legend>
 
@@ -305,7 +305,6 @@
             <thead>
                 <tr>
                     <th colspan="2">Unicode</th>
-                    <th colspan="2">Unifont</th>
                     <th colspan="2">Comfont</th>
                 </tr>
                 <tr>
