--- a/index.html
+++ b/index.html
@@ -319,12 +319,15 @@
         </table>
     </div>
 
-    <h2>License</h2>
+    <h2><a href="LICENSE.txt">License</a></h2>
 
     <p>
-        This project and the glyph designs on this page are licensed under the <a href="LICENSE.txt">GNU General Public License Version 3.</a>
-        The font files for this project will be dual-licensed under the <a href="OFL.txt">SIL Open Font License (OFL) version 1.1</a>
-        and the GNU General Public License Version 3 with the GNU font embedding exception.
+        This project and the glyph designs on this page are licensed under the GNU General Public License Version 2 or
+        (at your option) any later version</a>.
+
+        The font files for this project will be dual-licensed under the SIL Open Font License (OFL) version 1.1 and the
+        GNU General Public License Version 2 or (at your option) any later version, with the GNU font embedding
+        exception.
     </p>
 </body>
 
